--- a/render.yaml
+++ b/render.yaml
@@ -9,9 +9,7 @@ services:
     - key: WEB_CONCURRENCY
       value: 4
     - key: DATABASE_URL
-      fromDatabase:
-        name: portfolio
-        property: connectionString
+      value: "db.sqlite3"
     # - key: DJANGO_SECRET_KEY
     - key: SECRET_KEY
       generateValue: true
