--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Django==4.0.5
-wagtail==3.0.1
+Django==4.0.7
+wagtail==3.0.3
 django-colorfield==0.7.1
 django-widget-tweaks==1.4.12
 dj-database-url== 0.5.0
@@ -8,3 +8,36 @@ cloudinary==1.29.0
 psycopg2-binary==2.9.3
 whitenoise==6.1.0
 gunicorn==20.1.0
+anyascii==0.3.1
+asgiref==3.5.2
+beautifulsoup4==4.9.3
+certifi==2022.6.15.2
+charset-normalizer==2.1.1
+django-cors-headers==3.13.0
+django-filter==21.1
+django-modelcluster==6.0
+django-permissionedforms==0.1
+django-taggit==2.1.0
+django-treebeard==4.5.1
+djangorestframework==3.13.1
+draftjs-exporter==2.1.7
+et-xmlfile==1.1.0
+html5lib==1.1
+idna==3.4
+l18n==2021.3
+openpyxl==3.0.10
+Pillow==9.2.0
+pytz==2022.2.1
+requests==2.28.1
+six==1.16.0
+soupsieve==2.3.2.post1
+sqlparse==0.4.2
+tablib==3.2.1
+telepath==0.3
+tzdata==2022.2
+urllib3==1.26.12
+webencodings==0.5.1
+Willow==1.4.1
+xlrd==2.0.1
+XlsxWriter==3.0.3
+xlwt==1.3.0
